package victor.training.stream.support;

public record Product(String name) {
}
