@startuml

class Order {
    -   createdOn: LocalDate
    -   id: Integer
    -   orderLines: List<OrderLine>
    -   paymentMethod: PaymentMethod
    -   returnReason: String
    -   status: Status
    -   total: double
}

class OrderLine {
    -   count: int
    -   isSpecialOffer: boolean
    -   product: Product
}

class Product {
    - name: String
}

Order --> "0..*" OrderLine: orderLines
OrderLine --> "1" Product: product

@enduml